# Assinatura_Digital

./: .gitignore  README.md
simulacao-bancaria/: pyproject.toml
simulacao-bancaria/rsa/ana/: chave_privada_ana.pem
simulacao-bancaria/rsa/kaina/: chave_privada_kaina.pem
simulacao-bancaria/scripts/: cliente.py  servidor.py
simulacao-bancaria/src/simulacao_bancaria/: seguranca.py
