[project]
name = "simulacao-bancaria"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Caroline",email = "155763806+ACPedrosa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (>=46.0.1,<47.0.0)"
]

[tool.poetry]
packages = [{include = "simulacao_bancaria", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
